name:                meow
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/vicfred/meow
license:             BSD3
license-file:        LICENSE
author:              Vicfred
maintainer:          vicfred@vicfred.dev
copyright:           2020 Vicfred
category:            bot
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable meow
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
